--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </style>
 </head>
 <body>
-  <h1>Click the Balloon to Reveal Instructions!</h1>
+  <h1>Pop the Balloon to learn our task!</h1>
   <div id="balloonContainer">
     <!-- Balloon loads here -->
   </div>
