--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         console.log('Latest row:', latest);
 
         // Use the new column header name: "Pop the Balloon"
-        const directionText = latest['Pop the Balloon'] || 'No instructions found';
+        const directionText = latest['Instructions'] || 'No instructions found';
         console.log('Instructions text:', directionText);
 
         const balloonHTML = `
